--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v2
-      - name: print something
-        run: ls
+      - name: test application
+        run: npm run test
