--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,6 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: test application
+        env:
+          SECRET: ${{ secrets.test }}
         run: npm run test
