--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,5 @@ jobs:
         uses: actions/checkout@v2
       - name: print something
         run: ls
+      - name: run tests
+        run: npx jest
