--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: install
-        run: npm install
+        run: npm ci
       - name: print something
         run: ls
       - name: test
