--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,4 +9,6 @@ jobs:
       - name: print something
         run: ls
       - name: run tests
+        env:
+             secret: ${{ secrets.SOME_SECRET }}
         run: npx jest
