--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+    - name: tests
       env:
           secret: ${{ secrets.SOME_SECRET }}
-    - run: npm test
+      run: npm test
