--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -1,8 +1,10 @@
 name: Silpion Craft-Night Nightly Workflow
+
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '*/5 * * * *'
+  workflow_dispatch:
 
 jobs:
   build:
