--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -3,7 +3,7 @@ name: Silpion Craft-Night Nightly Workflow
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/5 * * * *'
+    - cron:  '0 * * * *'
   workflow_dispatch:
 
 jobs:
